Some styling for the demo page, and fix hex jumping

--- a/frontend/style/creation.styl
+++ b/frontend/style/creation.styl
@@ -591,16 +591,50 @@ body > div
     top 0
     left 0
     opacity 0
-    background-size 100%
+    background-color rgba(red, 0.1)
 
     &.visible
       transition opacity 0.6s
       opacity 1
 
+    .header
+
+
+    .footer
+      .logo
+        position absolute
+        top 920px
+        left 20px
+        background-image url('/frontend/image/logo-presentation.png')
+        background-repeat no-repeat
+        background-size 120px
+        width 120px
+        height (120px / 2.22)
+        border-right 1px solid black
+        padding-right 10px
+      .top
+        position absolute
+        top 900px
+        left 20px
+        width 768px - 20px - 20px
+        height 1px
+        background-color black
+      .big
+        position absolute
+        top 920px
+        left 160px
+        text-transform uppercase
+        font-size 20px
+      .small
+        position absolute
+        top 950px
+        left 160px
+        font-size 10px
+
   svg
     position absolute
-    top 300px
-    left 141px
+    top 160px
+    left 435px
 
     polygon
       transition all 2s
